--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -12,21 +12,23 @@
 <!-- ----------
 	Button Components
 ---------- -->
-			@@include('components/buttons/button.sapphire.html')
+			@@include('components/buttons/pills/pill.sapphire.html')
 			<br/><br/>
-			@@include('components/buttons/button.sapphire.small.html')
+			@@include('components/buttons/pills/pill.sapphire.small.html')
 			<br/><br/>
-			@@include('components/buttons/button.sapphire.secondary.html')
+			@@include('components/buttons/pills/pill.sapphire.secondary.html')
 			<br/><br/>
-			@@include('components/buttons/button.sapphire.secondary.small.html')
+			@@include('components/buttons/pills/pill.sapphire.secondary.small.html')
 			<br/><br/>
-			@@include('components/buttons/button.onyx.html')
+			@@include('components/buttons/pills/pill.onyx.html')
 			<br/><br/>
-			@@include('components/buttons/button.onyx.small.html')
+			@@include('components/buttons/pills/pill.onyx.small.html')
 			<br/><br/>
-			@@include('components/buttons/button.onyx.secondary.html')
+			@@include('components/buttons/pills/pill.onyx.secondary.html')
 			<br/><br/>
-			@@include('components/buttons/button.onyx.secondary.small.html')
+			@@include('components/buttons/pills/pill.onyx.secondary.small.html')
+			<br/><br/>
+			@@include('components/buttons/text/text.html')
 			<br/><br/>
 <!-- ----------
 	END Button Components
@@ -146,6 +148,14 @@ END Eyebrow Components
 			@@include('modules/cta-banner/cta-banner.oneColumn.small.html')
 <!-- ----------
   END One CTA Banner
+---------- -->
+
+<!-- ----------
+  Table
+---------- -->
+			@@include('modules/table/table.html')
+<!-- ----------
+END Table
 ---------- -->
 
 		</center>
