fixed module/component files in dist not getting juiced

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,7 @@
 :root {
+	/* ---------- Colors ---------- */
+	--light_grey: #C5C6C6;
+	
 	/* ---------- Variant Colors ---------- */
   --parchment: #ffffff;
 	--onyx: #171A1C;
