--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -139,9 +139,9 @@ a {
 	padding: 20px 0;
 }
 
-img {
+/* img {
 	max-width: 100%;
-}
+} */
 
 table {
 	border-collapse: collapse !important;
@@ -177,32 +177,52 @@ table {
 /* ---------- END Component Styles ---------- */
 
 /* ---------- Module Styles ---------- */
-.wrapper {
+.module {
 	display: table;
 	width: 100%;
 	background-color: var(--parchment);
 	max-width: 640px;
 }
 
-.module {
+.frame {
+	width: 32px;
+}
+
+.frame.left {
+	border-right: 0.5px solid var(--frame);
+}
+
+.frame.right {
+	border-left: 0.5px solid var(--frame);
+}
+
+.content {
+	padding: 32px 16px;
+}
+
+.content.v-flush {
+	padding: 0 16px;
+}
+
+/* .container {
 	display: block;
-	margin-left: 32px;
-	margin-right: 32px;
+	padding-left: 32px;
+	padding-right: 32px;
 }
 
 .container {
 	display: block;
 	padding: 32px 16px;
-}
+} */
 
-.container.v-flush {
+/* .container.v-flush {
 	padding: 0 16px;
-}
+} */
 
-.container.framed {
+/* .container.framed {
 	border-left: 1px solid var(--frame);
 	border-right: 1px solid var(--frame);
-}
+} */
 /* ---------- END Module Styles ---------- */
 
 /* ---------- Mobile Styles ---------- */
