--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -26,6 +26,10 @@
 <!-- ---------- Email Banner two Column Modules ---------- -->
 			@@include( "modules/email-banner-two-columns/email-banner-two-column.html" )
 <!-- ---------- END Email Banner two Column Modules ---------- -->
+
+<!-- ---------- Email Heading Modules ---------- -->
+			@@include( "modules/email-headings/email-heading.html" )
+<!-- ---------- END Email Heading Modules ---------- -->
 		</center>
 	</body>
 </html>
