--- a/src/components/buttons/pills/template.html
+++ b/src/components/buttons/pills/template.html
@@ -1,16 +1,11 @@
 <!--[if mso]>
-	<v:roundrect 
-		xmlns:v="urn:schemas-microsoft-com:vml" 
-		xmlns:w="urn:schemas-microsoft-com:office:word" 
-		rel="noopener" 
-		target="_blank" 
-		href="https://lazard.com/"
-		style="height:32px;v-text-anchor:middle;width:209px;" 
-		arcsize="15%" stroke="f" fillcolor="#00539A">
+	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+		style="height:32px;v-text-anchor:middle;width:98px;" 
+		fillcolor="#00539A">
 		<w:anchorlock/>
 		<center>
 <![endif]-->
-<a target="_blank" href="https://lazard.com/" style class="btn pill sapphire">#00539A Button</a>
+<a target="_blank" href="https://lazard.com/" style class="btn pill sapphire">Download</a>
 <!--[if mso]>
 		</center>
 	</v:roundrect>
