--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -30,6 +30,10 @@
 <!-- ---------- Email Heading Modules ---------- -->
 			@@include( "modules/email-headings/email-heading.html" )
 <!-- ---------- END Email Heading Modules ---------- -->
+
+<!-- ---------- One Column Content Modules ---------- -->
+@@include( "modules/one-column-contents/one-column-content.html" )
+<!-- ---------- END One Column Content Modules ---------- -->
 		</center>
 	</body>
 </html>
