Added minification to the css before it gets inlined to the dist

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="../../src/styles/index.css">
+		<link rel="stylesheet" type="text/css" href="../index.css">
 	</head>
 	<body align="center">
 		<center>
@@ -32,7 +32,7 @@
 <!-- ---------- END Email Heading Modules ---------- -->
 
 <!-- ---------- One Column Content Modules ---------- -->
-@@include( "modules/one-column-contents/one-column-content.html" )
+			@@include( "modules/one-column-contents/one-column-content.html" )
 <!-- ---------- END One Column Content Modules ---------- -->
 		</center>
 	</body>
