--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,8 +51,8 @@ table tr td {
 }
 
 ul {
-	margin-left: 0;
-	padding-left: 16px;
+	margin: 0;
+	padding: 16px;
 	line-height: 160%;
 	font-weight: 400;
 	font-size: 12px;
@@ -60,6 +60,13 @@ ul {
 
 li {
 	padding-bottom: 8px;
+	padding-left: 0;
+	margin: 0;
+}
+
+li::marker {
+	color: var(--sapphire);
+	font-size: 16px;
 }
 
 li a {
