--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -34,6 +34,10 @@
 <!-- ---------- One Column Content Modules ---------- -->
 			@@include( "modules/one-column-contents/one-column-content.html" )
 <!-- ---------- END One Column Content Modules ---------- -->
+
+<!-- ---------- Table Modules ---------- -->
+			@@include( "modules/tables/table.html" )
+<!-- ---------- END Table Modules ---------- -->
 		</center>
 	</body>
 </html>
