--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -17,10 +17,100 @@
 
 <!-- ---------- Logo Banner Modules ---------- -->
 			@@include( "modules/logo-banners/logo-banner.html" )
+
+			<!--
+				Module: logo-banner
+				Variant: Sapphire
+			-->
+			@@include( "modules/logo-banners/template.html", {
+				variant: "sapphire",
+				imgSrc: "LAM_Logo_Transparent_White.png"
+			} )
+
+			<!--
+				Module: logo-banner
+				Variant: Sage
+			-->
+			@@include( "modules/logo-banners/template.html", {
+				variant: "sage",
+				imgSrc: "LAM_Logo_Transparent.png"
+			} )
+
+			<!--
+				Module: logo-banner
+				Variant: Onyx
+			-->
+			@@include( "modules/logo-banners/template.html", {
+				variant: "onyx",
+				imgSrc: "LAM_Logo_Transparent_White.png"
+			} )
+
+			<!--
+				Module: logo-banner
+				Variant: CLarity
+			-->
+			@@include( "modules/logo-banners/template.html", {
+				variant: "clarity",
+				imgSrc: "LAM_Logo_Transparent.png"
+			} )
+
+			<!--
+				Module: logo-banner
+				Variant: Currrency
+			-->
+			@@include( "modules/logo-banners/template.html", {
+				variant: "currency",
+				imgSrc: "LAM_Logo_Transparent_White.png"
+			} )
 <!-- ---------- END Logo Banner Modules ---------- -->
 
 <!-- ---------- Email Banner One Column Modules ---------- -->
 			@@include( "modules/email-banner-one-columns/email-banner-one-column.html" )
+
+			<!--
+				Module: Email Banner One Column
+				Variant: Sapphire
+			-->
+			@@include( "modules/email-banner-one-columns/template.html", {
+				variant: "sapphire",
+				imgSrc: "LAM_Banner_Industrial.png"
+			} )
+
+			<!--
+				Module: Email Banner One Column
+				Variant: sage
+			-->
+			@@include( "modules/email-banner-one-columns/template.html", {
+				variant: "sage",
+				imgSrc: "LAM_Banner_Mountains.png"
+			} )
+
+			<!--
+				Module: Email Banner One Column
+				Variant: onyx
+			-->
+			@@include( "modules/email-banner-one-columns/template.html", {
+				variant: "onyx",
+				imgSrc: "LAM_Banner_Sand.png"
+			} )
+
+			<!--
+				Module: Email Banner One Column
+				Variant: clarity
+			-->
+			@@include( "modules/email-banner-one-columns/template.html", {
+				variant: "clarity",
+				imgSrc: "LAM_Banner_Industrial.png"
+			} )
+
+			<!--
+				Module: Email Banner One Column
+				Variant: currency
+			-->
+			@@include( "modules/email-banner-one-columns/template.html", {
+				variant: "currency",
+				imgSrc: "LAM_Banner_Industrial.png"
+			} )
 <!-- ---------- END Email Banner One Column Modules ---------- -->
 
 <!-- ---------- Email Banner two Column Modules ---------- -->
