--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -115,6 +115,16 @@
 
 <!-- ---------- Email Banner two Column Modules ---------- -->
 			@@include( "modules/email-banner-two-columns/email-banner-two-column.html" )
+
+			@@include( "modules/email-banner-two-columns/email-banner-two-column.sapphire.html" )
+
+			@@include( "modules/email-banner-two-columns/email-banner-two-column.sage.html" )
+
+			@@include( "modules/email-banner-two-columns/email-banner-two-column.onyx.html" )
+
+			@@include( "modules/email-banner-two-columns/email-banner-two-column.clarity.html" )
+
+			@@include( "modules/email-banner-two-columns/email-banner-two-column.currency.html" )
 <!-- ---------- END Email Banner two Column Modules ---------- -->
 
 <!-- ---------- Email Heading Modules ---------- -->
