--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -12,164 +12,51 @@
 		<table style align="center" border="0" cellpadding="0" cellspacing="0" width="100%" role="presentation" class="wrapper">
 			<tr>
 				<td style align="center">
+					<!-- ---------- Preheader Modules ---------- -->
 					@@include( "modules/preheaders/preheader.link.html" )
-				</td>
-			</tr>
-			<tr>
-				<td style align="center">
-					@@include( "modules/preheaders/preheader.link.html" )
-				</td>
-			</tr>
-			<tr>
-				<td style align="center">
-					@@include( "modules/logo-banners/logo-banner.html" )
-				</td>
-			</tr>
+					@@include( "modules/preheaders/preheader.html" )
+					<!-- ---------- END Preheader Modules ---------- -->
 
-			<tr>
-				<td style align="center">
-					<!--
-						Module: logo-banner
-						Variant: Sapphire
-					-->
-					@@include( "modules/logo-banners/template.html", {
-						variant: "sapphire",
-						imgSrc: "LAM_Logo_Transparent_White.png"
-					} )
+					<!-- ---------- Logo Banner Modules ---------- -->
+					@@include( "modules/logo-banners/logo-banner.html" )
+					@@include( "modules/logo-banners/logo-banner.sapphire.html" )
+					@@include( "modules/logo-banners/logo-banner.sage.html" )
+					@@include( "modules/logo-banners/logo-banner.onyx.html" )
+					@@include( "modules/logo-banners/logo-banner.clarity.html" )
+					@@include( "modules/logo-banners/logo-banner.currency.html" )
+					<!-- ---------- END Logo Banner Modules ---------- -->
+
+					<!-- ---------- Email Banner One Column Modules ---------- -->
+					@@include( "modules/email-banner-one-columns/email-banner-one-column.html" )
+					@@include( "modules/email-banner-one-columns/email-banner-one-column.sapphire.html" )
+					@@include( "modules/email-banner-one-columns/email-banner-one-column.sage.html" )
+					@@include( "modules/email-banner-one-columns/email-banner-one-column.onyx.html" )
+					@@include( "modules/email-banner-one-columns/email-banner-one-column.clarity.html" )
+					@@include( "modules/email-banner-one-columns/email-banner-one-column.currency.html" )
+					<!-- ---------- END Email Banner One Column Modules ---------- -->
+
+					<!-- ---------- Email Banner Two Column Modules ---------- -->
+					@@include( "modules/email-banner-two-columns/email-banner-two-column.html" )
+					@@include( "modules/email-banner-two-columns/email-banner-two-column.sapphire.html" )
+					@@include( "modules/email-banner-two-columns/email-banner-two-column.sage.html" )
+					@@include( "modules/email-banner-two-columns/email-banner-two-column.onyx.html" )
+					@@include( "modules/email-banner-two-columns/email-banner-two-column.clarity.html" )
+					@@include( "modules/email-banner-two-columns/email-banner-two-column.currency.html" )
+					<!-- ---------- END Email Banner Two Column Modules ---------- -->
+
+					<!-- ---------- Email Heading Modules ---------- -->
+					@@include( "modules/email-headings/email-heading.html" )
+					<!-- ---------- END Email Heading Modules ---------- -->
+
+					<!-- ---------- One Column Content Modules ---------- -->
+					@@include( "modules/one-column-contents/one-column-content.html" )
+					<!-- ---------- END One Column Content Modules ---------- -->
+
+					<!-- ---------- Table Modules ---------- -->
+					 @@include( "modules/tables/table.html" )
+					<!-- ---------- END Table Modules ---------- -->
 				</td>
 			</tr>
 		</table>
-
-		<center>
-<!-- ---------- Preheader Modules ---------- -->
-			@@include( "modules/preheaders/preheader.link.html" )
-
-			@@include( "modules/preheaders/preheader.html" )
-<!-- ---------- END Preheader Modules ---------- -->
-
-<!-- ---------- Logo Banner Modules ---------- -->
-			@@include( "modules/logo-banners/logo-banner.html" )
-
-			<!--
-				Module: logo-banner
-				Variant: Sapphire
-			-->
-			@@include( "modules/logo-banners/template.html", {
-				variant: "sapphire",
-				imgSrc: "LAM_Logo_Transparent_White.png"
-			} )
-
-			<!--
-				Module: logo-banner
-				Variant: Sage
-			-->
-			@@include( "modules/logo-banners/template.html", {
-				variant: "sage",
-				imgSrc: "LAM_Logo_Transparent.png"
-			} )
-
-			<!--
-				Module: logo-banner
-				Variant: Onyx
-			-->
-			@@include( "modules/logo-banners/template.html", {
-				variant: "onyx",
-				imgSrc: "LAM_Logo_Transparent_White.png"
-			} )
-
-			<!--
-				Module: logo-banner
-				Variant: CLarity
-			-->
-			@@include( "modules/logo-banners/template.html", {
-				variant: "clarity",
-				imgSrc: "LAM_Logo_Transparent.png"
-			} )
-
-			<!--
-				Module: logo-banner
-				Variant: Currrency
-			-->
-			@@include( "modules/logo-banners/template.html", {
-				variant: "currency",
-				imgSrc: "LAM_Logo_Transparent_White.png"
-			} )
-<!-- ---------- END Logo Banner Modules ---------- -->
-
-<!-- ---------- Email Banner One Column Modules ---------- -->
-			@@include( "modules/email-banner-one-columns/email-banner-one-column.html" )
-
-			<!--
-				Module: Email Banner One Column
-				Variant: Sapphire
-			-->
-			@@include( "modules/email-banner-one-columns/template.html", {
-				variant: "sapphire",
-				imgSrc: "LAM_Banner_Industrial.png"
-			} )
-
-			<!--
-				Module: Email Banner One Column
-				Variant: sage
-			-->
-			@@include( "modules/email-banner-one-columns/template.html", {
-				variant: "sage",
-				imgSrc: "LAM_Banner_Mountains.png"
-			} )
-
-			<!--
-				Module: Email Banner One Column
-				Variant: onyx
-			-->
-			@@include( "modules/email-banner-one-columns/template.html", {
-				variant: "onyx",
-				imgSrc: "LAM_Banner_Sand.png"
-			} )
-
-			<!--
-				Module: Email Banner One Column
-				Variant: clarity
-			-->
-			@@include( "modules/email-banner-one-columns/template.html", {
-				variant: "clarity",
-				imgSrc: "LAM_Banner_Industrial.png"
-			} )
-
-			<!--
-				Module: Email Banner One Column
-				Variant: currency
-			-->
-			@@include( "modules/email-banner-one-columns/template.html", {
-				variant: "currency",
-				imgSrc: "LAM_Banner_Industrial.png"
-			} )
-<!-- ---------- END Email Banner One Column Modules ---------- -->
-
-<!-- ---------- Email Banner two Column Modules ---------- -->
-			@@include( "modules/email-banner-two-columns/email-banner-two-column.html" )
-
-			@@include( "modules/email-banner-two-columns/email-banner-two-column.sapphire.html" )
-
-			@@include( "modules/email-banner-two-columns/email-banner-two-column.sage.html" )
-
-			@@include( "modules/email-banner-two-columns/email-banner-two-column.onyx.html" )
-
-			@@include( "modules/email-banner-two-columns/email-banner-two-column.clarity.html" )
-
-			@@include( "modules/email-banner-two-columns/email-banner-two-column.currency.html" )
-<!-- ---------- END Email Banner two Column Modules ---------- -->
-
-<!-- ---------- Email Heading Modules ---------- -->
-			@@include( "modules/email-headings/email-heading.html" )
-<!-- ---------- END Email Heading Modules ---------- -->
-
-<!-- ---------- One Column Content Modules ---------- -->
-			@@include( "modules/one-column-contents/one-column-content.html" )
-<!-- ---------- END One Column Content Modules ---------- -->
-
-<!-- ---------- Table Modules ---------- -->
-			@@include( "modules/tables/table.html" )
-<!-- ---------- END Table Modules ---------- -->
-		</center>
 	</body>
 </html>
