Fixed spacing issue on OL as well as maintaining center and proper width in DW

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -10,53 +10,142 @@
 	<body align="center">
 
 		<table style align="center" border="0" cellpadding="0" cellspacing="0" width="100%" role="presentation" class="wrapper">
+<!-- ---------- Preheader Modules ---------- -->
 			<tr>
-				<td style align="center">
-					<!-- ---------- Preheader Modules ---------- -->
+				<td align="center">
 					@@include( "modules/preheaders/preheader.link.html" )
-					@@include( "modules/preheaders/preheader.html" )
-					<!-- ---------- END Preheader Modules ---------- -->
-
-					<!-- ---------- Logo Banner Modules ---------- -->
-					@@include( "modules/logo-banners/logo-banner.html" )
-					@@include( "modules/logo-banners/logo-banner.sapphire.html" )
-					@@include( "modules/logo-banners/logo-banner.sage.html" )
-					@@include( "modules/logo-banners/logo-banner.onyx.html" )
-					@@include( "modules/logo-banners/logo-banner.clarity.html" )
-					@@include( "modules/logo-banners/logo-banner.currency.html" )
-					<!-- ---------- END Logo Banner Modules ---------- -->
-
-					<!-- ---------- Email Banner One Column Modules ---------- -->
-					@@include( "modules/email-banner-one-columns/email-banner-one-column.html" )
-					@@include( "modules/email-banner-one-columns/email-banner-one-column.sapphire.html" )
-					@@include( "modules/email-banner-one-columns/email-banner-one-column.sage.html" )
-					@@include( "modules/email-banner-one-columns/email-banner-one-column.onyx.html" )
-					@@include( "modules/email-banner-one-columns/email-banner-one-column.clarity.html" )
-					@@include( "modules/email-banner-one-columns/email-banner-one-column.currency.html" )
-					<!-- ---------- END Email Banner One Column Modules ---------- -->
-
-					<!-- ---------- Email Banner Two Column Modules ---------- -->
-					@@include( "modules/email-banner-two-columns/email-banner-two-column.html" )
-					@@include( "modules/email-banner-two-columns/email-banner-two-column.sapphire.html" )
-					@@include( "modules/email-banner-two-columns/email-banner-two-column.sage.html" )
-					@@include( "modules/email-banner-two-columns/email-banner-two-column.onyx.html" )
-					@@include( "modules/email-banner-two-columns/email-banner-two-column.clarity.html" )
-					@@include( "modules/email-banner-two-columns/email-banner-two-column.currency.html" )
-					<!-- ---------- END Email Banner Two Column Modules ---------- -->
-
-					<!-- ---------- Email Heading Modules ---------- -->
-					@@include( "modules/email-headings/email-heading.html" )
-					<!-- ---------- END Email Heading Modules ---------- -->
-
-					<!-- ---------- One Column Content Modules ---------- -->
-					@@include( "modules/one-column-contents/one-column-content.html" )
-					<!-- ---------- END One Column Content Modules ---------- -->
-
-					<!-- ---------- Table Modules ---------- -->
-					 @@include( "modules/tables/table.html" )
-					<!-- ---------- END Table Modules ---------- -->
 				</td>
 			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/preheaders/preheader.html" )
+				</td>
+			</tr>
+<!-- ---------- END Preheader Modules ---------- -->
+			
+<!-- ---------- Logo Banner Modules ---------- -->
+			<tr>
+				<td align="center">			
+					@@include( "modules/logo-banners/logo-banner.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/logo-banners/logo-banner.sapphire.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/logo-banners/logo-banner.sage.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/logo-banners/logo-banner.onyx.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/logo-banners/logo-banner.clarity.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/logo-banners/logo-banner.currency.html" )
+				</td>
+			</tr>
+<!-- ---------- END Logo Banner Modules ---------- -->
+
+<!-- ---------- Email Banner One Column Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/email-banner-one-columns/email-banner-one-column.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/email-banner-one-columns/email-banner-one-column.sapphire.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/email-banner-one-columns/email-banner-one-column.sage.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/email-banner-one-columns/email-banner-one-column.onyx.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/email-banner-one-columns/email-banner-one-column.clarity.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/email-banner-one-columns/email-banner-one-column.currency.html" )
+				</td>
+			</tr>
+<!-- ---------- END Email Banner One Column Modules ---------- -->
+
+<!-- ---------- Email Banner Two Column Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/email-banner-two-columns/email-banner-two-column.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/email-banner-two-columns/email-banner-two-column.sapphire.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/email-banner-two-columns/email-banner-two-column.sage.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/email-banner-two-columns/email-banner-two-column.onyx.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/email-banner-two-columns/email-banner-two-column.clarity.html" )
+				</td>
+			</tr>
+			<tr>
+				<td align="center">
+					@@include( "modules/email-banner-two-columns/email-banner-two-column.currency.html" )
+				</td>
+			</tr>
+<!-- ---------- END Email Banner Two Column Modules ---------- -->
+
+<!-- ---------- Email Heading Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/email-headings/email-heading.html" )
+				</td>
+			</tr>
+<!-- ---------- END Email Heading Modules ---------- -->
+
+<!-- ---------- One Column Content Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/one-column-contents/one-column-content.html" )
+				</td>
+			</tr>
+<!-- ---------- END One Column Content Modules ---------- -->
+
+<!-- ---------- Table Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/tables/table.html" )
+				</td>
+			</tr>
+<!-- ---------- END Table Modules ---------- -->
 		</table>
 	</body>
 </html>
