Removed template files from Dist to avoid confusion

--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -8,7 +8,6 @@
 		<link rel="stylesheet" type="text/css" href="../index.css">
 	</head>
 	<body align="center">
-
 		<table style align="center" border="0" cellpadding="0" cellspacing="0" width="100%" role="presentation" class="wrapper">
 <!-- ---------- Preheader Modules ---------- -->
 			<tr>
@@ -129,7 +128,75 @@
 					@@include( "modules/email-headings/email-heading.html" )
 				</td>
 			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/email-headings/email-heading.sapphire.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/email-headings/email-heading.sage.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/email-headings/email-heading.onyx.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/email-headings/email-heading.clarity.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/email-headings/email-heading.currency.html" )
+				</td>
+			</tr>
 <!-- ---------- END Email Heading Modules ---------- -->
+
+<!-- ---------- Email Heading Small Headline Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/email-headings-small/email-heading.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/email-headings-small/email-heading.sapphire.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/email-headings-small/email-heading.sage.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/email-headings-small/email-heading.onyx.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/email-headings-small/email-heading.clarity.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/email-headings-small/email-heading.currency.html" )
+				</td>
+			</tr>
+<!-- ---------- END Email Heading Small Headline Modules ---------- -->
 
 <!-- ---------- One Column Content Modules ---------- -->
 			<tr>
