Changed pill buttons to have an MSO dark variant while also keeping them smark for modern email clients

--- a/src/components/buttons/pills/templates/template.primary.sapphire.html
+++ b/src/components/buttons/pills/templates/template.primary.sapphire.html
@@ -4,7 +4,7 @@
 -->
 <!--[if mso]>
 	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-		style="height:32px;v-text-anchor:middle;width:@@width;" 
+		style="height:32px;v-text-anchor:middle;color:#ffffff;width:@@width;" 
 		fillcolor="#00539A">
 		<w:anchorlock/>
 		<center>
