--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -204,6 +204,30 @@
 					@@include( "modules/one-column-contents/one-column-content.html" )
 				</td>
 			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/one-column-contents/one-column-content.sapphire.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/one-column-contents/one-column-content.currency.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/one-column-contents/one-column-content.sage.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/one-column-contents/one-column-content.clarity.html" )
+				</td>
+			</tr>
 <!-- ---------- END One Column Content Modules ---------- -->
 
 <!-- ---------- Table Modules ---------- -->
