--- a/src/components/buttons/pills/templates/template.msoDark.primary.onyx.html
+++ b/src/components/buttons/pills/templates/template.msoDark.primary.onyx.html
@@ -1,15 +1,15 @@
 <!--
 	Component: Pill Button
-	Variant: Primary, Sapphire
+	Variant: Primary, MSO Dark, Onyx
 -->
 <!--[if mso]>
 	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-		style="height:32px;v-text-anchor:middle;color:#ffffff;width:198px;" 
-		fillcolor="#00539A">
+		style="height:32px;v-text-anchor:middle;color:#171A1C;width:@@width;" 
+		fillcolor="#ffffff">
 		<w:anchorlock/>
 		<center>
 <![endif]-->
-<a target="_blank" href="https://lazard.com/" style="width: 198px" class="btn pill">Pill Primary Sapphire</a>
+<a target="_blank" href="https://lazard.com/" style="width: @@width"  class="btn pill onyx">@@label</a>
 <!--[if mso]>
 		</center>
 	</v:roundrect>
