--- a/src/components/buttons/pills/templates/template.msoDark.primary.sapphire.html
+++ b/src/components/buttons/pills/templates/template.msoDark.primary.sapphire.html
@@ -1,15 +1,15 @@
 <!--
 	Component: Pill Button
-	Variant: Secondary, Onyx
+	Variant: Primary, MSO Dark, Sapphire
 -->
 <!--[if mso]>
 	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-		style="height:32px;v-text-anchor:middle;width:@@width;" 
-		fillcolor="#FFFFFF">
+		style="height:32px;v-text-anchor:middle;color:#00539A;width:@@width;" 
+		fillcolor="#ffffff">
 		<w:anchorlock/>
 		<center>
 <![endif]-->
-<a target="_blank" href="https://lazard.com/" style="width: @@width"  class="btn pill onyx secondary">@@label</a>
+<a target="_blank" href="https://lazard.com/" style="width: @@width"  class="btn pill">@@label</a>
 <!--[if mso]>
 		</center>
 	</v:roundrect>
