--- a/src/components/buttons/pills/templates/template.msoDark.secondary.sapphire.html
+++ b/src/components/buttons/pills/templates/template.msoDark.secondary.sapphire.html
@@ -1,15 +1,15 @@
 <!--
 	Component: Pill Button
-	Variant: Secondary, Sapphire
+	Variant: Secondary, MSO Dark, Sapphire
 -->
 <!--[if mso]>
 	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" fill="f"
-		style="height:32px;v-text-anchor:middle;color:#00539A;width:198px;"
-		strokecolor="#00539A">
+		style="height:32px;v-text-anchor:middle;color:#ffffff;width:@@width;"
+		strokecolor="#ffffff">
 		<w:anchorlock/>
 		<center>
 <![endif]-->
-<a target="_blank" href="https://lazard.com/" style="width: 198px" class="btn pill secondary">Pill Secondary Sapphire</a>
+<a target="_blank" href="https://lazard.com/" style="width: @@width" class="btn pill secondary">@@label</a>
 <!--[if mso]>
 		</center>
 	</v:roundrect>
