--- a/src/components/buttons/pills/templates/template.secondary.onyx.html
+++ b/src/components/buttons/pills/templates/template.secondary.onyx.html
@@ -4,12 +4,12 @@
 -->
 <!--[if mso]>
 	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" fill="f" 
-		style="height:32px;v-text-anchor:middle;color:#171A1C;width:198px;" \
+		style="height:32px;v-text-anchor:middle;color:#171A1C;width:@@width;" \
 		strokecolor="#171A1C">
 		<w:anchorlock/>
 		<center>
 <![endif]-->
-<a target="_blank" href="https://lazard.com/" style="width: 198px" class="btn pill onyx secondary">Pill Secondary Onyx</a>
+<a target="_blank" href="https://lazard.com/" style="width: @@width"  class="btn pill onyx secondary">@@label</a>
 <!--[if mso]>
 		</center>
 	</v:roundrect>
