--- a/src/components/buttons/pills/templates/template.secondary.sapphire.html
+++ b/src/components/buttons/pills/templates/template.secondary.sapphire.html
@@ -3,9 +3,9 @@
 	Variant: Secondary, Sapphire
 -->
 <!--[if mso]>
-	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" fill="f"
 		style="height:32px;v-text-anchor:middle;color:#00539A;width:@@width;"
-		fillcolor="#FFFFFF">
+		strokecolor="#00539A">
 		<w:anchorlock/>
 		<center>
 <![endif]-->
