--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -230,13 +230,51 @@
 			</tr>
 <!-- ---------- END One Column Content Modules ---------- -->
 
-<!-- ---------- Table Modules ---------- -->
+<!-- ---------- Basic Table Modules ---------- -->
 			<tr>
 				<td align="center">
-					@@include( "modules/tables/table.html" )
+					@@include( "modules/tables/basic/table.basic.html" )
 				</td>
 			</tr>
-<!-- ---------- END Table Modules ---------- -->
+
+			<tr>
+				<td align="center">
+					@@include( "modules/tables/basic/table.basic.sapphire.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/tables/basic/table.basic.sage.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/tables/basic/table.basic.onyx.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/tables/basic/table.basic.clarity.html" )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/tables/basic/table.basic.currency.html" )
+				</td>
+			</tr>
+<!-- ---------- END Basic Table Modules ---------- -->
+
+<!-- ---------- Numbered Table Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/tables/numbered/table.numbered.html" )
+				</td>
+			</tr>
+<!-- ---------- END Numbered Table Modules ---------- -->
 		</table>
 	</body>
 </html>
