--- a/src/templates/master.html
+++ b/src/templates/master.html
@@ -275,6 +275,14 @@
 				</td>
 			</tr>
 <!-- ---------- END Numbered Table Modules ---------- -->
+
+<!-- ---------- Thumbnail Table Modules ---------- -->
+			<tr>
+				<td align="center">
+					@@include( "modules/tables/thumbnail/table.thumbnail.html" )
+				</td>
+			</tr>
+<!-- ---------- END Thumbnail Table Modules ---------- -->
 		</table>
 	</body>
 </html>
