--- a/src/components/buttons/text/template.html
+++ b/src/components/buttons/text/template.html
@@ -1,1 +1,1 @@
-<a href="#" class="text-btn @@variant">@@label <span>&#8594;</span></a>
+<a href="@@href" class="btn text @@variant">@@label <span>&#8594;</span></a>
